# Only-Noisy-Training

./: .gitignore  CLAUDE.md  colored_noise_utils.py  dataset_utils.py  download_urbansound_dataset.py  loss.py  loss_utils.py  main.py  metrics.py  metrics_utils.py  pyproject.toml  test_optimizations.py  train.py  urbansound_dataset_generator.py
.claude/: settings.local.json
DCUnet10_TSTM/: DCUnet.py  Dual_Transformer.py
commands/: train.sh
tests/: test_dataset_utils.py  test_integration.py  test_loss_functions.py
