[project]
name = "only-noisy-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "torch",
    "torchaudio",
    "scipy",
    "setuptools",
    "numba",
    "pesq",
    "pystoi",
    "librosa",
]