[project]
name = "only-noisy-training"
version = "0.1.0"
description = "Self-supervised speech denoising using only noisy audio signals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "librosa>=0.11.0",
    "numba>=0.60.0",
    "tqdm>=4.64.0",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "setuptools>=75.0.0",
    "pytest>=8.0.0",
]